--- a/cloudsim-plus/README.adoc
+++ b/cloudsim-plus/README.adoc
@@ -1,4 +1,17 @@
-# CloudSim Plus API
+:source-highlighter: highlightjs
+:numbered:
+:unsafe:
+
+ifdef::env-github[]
+:outfilesuffix: .adoc
+:caution-caption: :fire:
+:important-caption: :exclamation:
+:note-caption: :paperclip:
+:tip-caption: :bulb:
+:warning-caption: :warning:
+endif::[]
+
+= CloudSim Plus API
 
 This is the main module and single one required to build cloud computing simulations.
 It is available at Maven Central and can be added as a dependency to your own project to build
@@ -6,11 +19,12 @@ cloud simulations.
 
 Use the dependency snippet below to include it into your project's `pom.xml` file.
 
-```xml
+[source,xml]
+----
 <dependency>
     <groupId>org.cloudsimplus</groupId>
     <artifactId>cloudsim-plus</artifactId>
     <!-- Set a specific version or use the latest one -->
     <version>LATEST</version>
 </dependency>
-```
+----
